--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+asgiref==3.10.0
 certifi==2025.10.5
 chardet==3.0.4
 charset-normalizer==3.4.4
+Django==5.2.7
 googletrans==3.1.0a0
 h11==0.9.0
 h2==3.2.0
@@ -13,4 +15,5 @@ idna==2.10
 requests==2.32.5
 rfc3986==1.5.0
 sniffio==1.3.1
+sqlparse==0.5.3
 urllib3==2.5.0
